# jogoteca

./: Dockerfile  docker-compose.yml  prepare_db.py  pyproject.toml
src/: __init__.py  main.py
src/forms/: forms.py
src/helpers/: helpers.py
src/models/: models.py
src/templates/: base.html  form.html  index.html  login.html
src/views/: views.py
